Use invisible border trick on outer container to prevent context menu border being cut off when using width fit to content.
We had been setting certain context menus to have pre-determined min-widths and have wrapped text because Steam does not calculate the width correctly, possibly because text produces subpixel widths, and cuts off the menu borders.

Instead, we can move the border onto the inner container and give a fake 1px transparent border to the right. If Steam cuts this off, who cares. But the inner container's border is safe.

--- a/css/settings.css
+++ b/css/settings.css
@@ -2329,26 +2329,6 @@ button._3XdPuZMoLA5gthq09dqcSe._3XdPuZMoLA5gthq09dqcSe ._7uqoPx5Q7bdrbtNEh3iZn .
   background: transparent !important;
 }
 
-/* RECORDING DROPDOWN SEARCH */
-._29AJUo6aKT93gX24N5WFj_ ._2EstNjFIIZm_WUSKm5Wt7n:not(:has(.tid_OE5NJWCCVJQP1PfRc)),
-._29AJUo6aKT93gX24N5WFj_ ._2EstNjFIIZm_WUSKm5Wt7n.HoGkIKTQnkTEFGjqO-GMl {
-  width: 100% !important;
-  max-width: 400px !important;
-  min-width: 200px !important;
-}
-
-._29AJUo6aKT93gX24N5WFj_ ._1n7Wloe5jZ6fSuvV18NNWI {
-  top: unset !important;
-}
-
-.DesktopUI ._3GbHFVMCkeB-Dv1uphs9Xo {
-  margin:  var(--zehn-size-context-entry-margin) !important;
-  background: transparent !important;
-  opacity: 1 !important;
-  border: none !important;
-  border-radius: var(--zehn-size-radius-square) !important;
-}
-
 /* RECORRDING CHOICES */
 .DialogContent .DialogControlsSection>.Panel:has(._1EntoGyxFp22pF4skClUbC) {
   gap: 0 !important;
